--- a/index.html
+++ b/index.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FITRIO</title>
     <link rel="stylesheet" href="style.css">
     <!-- font -->
-     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Anton+SC&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Anton+SC&display=swap" rel="stylesheet">
 </head>
+
 <body>
     <!-- INICIO HEADER -->
     <nav class="nav">
@@ -45,34 +47,38 @@
 
 
     <!-- INICIO SECTION1 -->
-     <section class="section1">
+    <section class="section1">
         <div class="frase">
             <h2>
-                SOMOS O SEU ESPAÇO DE EXCELÊNCIA, DEDICADOS A TORNAR A SAÚDE E O BEM-ESTAR DE ALTO NÍVEL UMA REALIDADE PARA TODOS.
+                SOMOS O SEU ESPAÇO DE EXCELÊNCIA, DEDICADOS A TORNAR A SAÚDE E O BEM-ESTAR DE ALTO NÍVEL UMA REALIDADE
+                PARA TODOS.
             </h2>
-            </div>
-            <div class="texto">
-                <p>
-                Na FitRio, você é bem-vindo do jeito que é e encontra o suporte para ir além. Nossos planos incluem acesso a treinos digitais e presenciais, tudo pensado para te ajudar a conquistar seus objetivos de saúde e forma física. Conheça todas as nossas opções abaixo.
+        </div>
+        <div class="texto">
+            <p>
+                Na FitRio, você é bem-vindo do jeito que é e encontra o suporte para ir além. Nossos planos incluem
+                acesso a treinos digitais e presenciais, tudo pensado para te ajudar a conquistar seus objetivos de
+                saúde e forma física. Conheça todas as nossas opções abaixo.
             </p>
-            </div>    
-     </section>
+        </div>
+    </section>
 
 
-     <!-- INICIO SECTION2 -->
-     <section class="section2">
+    <!-- INICIO SECTION2 -->
+    <section class="section2">
         <div class="foto1">
             <img src="img/pessoaJ.jpg" alt="">
         </div>
-     </section>
+    </section>
 
     <!-- INICIO SECTION3 -->
-     <section class="section3">
+    <section class="section3">
         <div class="comodidades">
             <h2> COMODIDADES</h2>
         </div>
-        <p>      
-        Na FitRio, estamos sempre expandindo nossas comodidades para atender às necessidades da nossa comunidade. Gostaria de ver algo adicionado à nossa lista? Envie uma solicitação.
+        <p>
+            Na FitRio, estamos sempre expandindo nossas comodidades para atender às necessidades da nossa comunidade.
+            Gostaria de ver algo adicionado à nossa lista? Envie uma solicitação.
         </p>
         <div class="listagem">
             <div class="lista1">
@@ -88,7 +94,7 @@
                 </ul>
             </div>
             <div class="lista2">
-                <ul     style="list-style-type: none;">
+                <ul style="list-style-type: none;">
                     <li>Nutricionista</li>
                     <li>•</li>
                     <li>Pilates</li>
@@ -99,32 +105,47 @@
                 </ul>
             </div>
         </div>
-     </section>
+    </section>
 
-     <!-- INICIO SECTION4 -->
-     <section class="section4">
+    <!-- INICIO SECTION4 -->
+    <section class="section4">
         <div class="agendamento">
-            <h1>AGENTE UMA VISITA</h1>
-            <p>Faça um tour gratuito por qualquer uma das nossas unidades para ajudar você a decidir se a FitRio é a academia certa para você. Você terá a oportunidade de experimentar os equipamentos, assistir às aulas e obter respostas diretas para todas as suas perguntas.</p>
+            <h1>AGENDE UMA VISITA</h1>
+            <p>Faça um tour gratuito por qualquer uma das nossas unidades para ajudar você a decidir se a FitRio é a
+                academia certa para você. Você terá a oportunidade de experimentar os equipamentos, assistir às aulas e
+                obter respostas diretas para todas as suas perguntas.</p>
         </div>
         <div class="formulario">
             <form class="formulario1">
-                <label>Nome</label>
-                <label>Primeiro nome:</label>
+                <label>Nome completo:</label>
                 <input type="text">
-                <label>Último nome:</label>
+                <label>Telefone</label>
                 <input type="text">
                 <label>Email</label>
                 <input type="email">
                 <label>Data de Nascimento</label>
-                <input type="date">
-                <input type="submit" value="Enviar">
-
+                <input class="data" type="date">
+                <input class="btn-enviar" type="submit" value="ENVIAR">
             </form>
         </div>
-     </section>
+    </section>
 
+    <!-- INICIO SECTION5 -->
+    <section class="section5">
+        <h2>❝</h2>
+        <h2>A FITRIO FOI FUNDAMENTAL NA MINHA PREPARAÇÃO PARA A MEIA MARATONA, ME DANDO O SUPORTE E O TREINO QUE EU
+            PRECISAVA PARA CRUZAR A LINHA DE CHEGADA..</h2>
+        <p>-Tayna Araujo</p>
+    </section>
 
+    <!-- INICIO SECTION6 -->
+<footer>
+    <div class="titf">
+        <h3>ENCONTRE-NOS</h3>
+        <p>Endereço: R. Gabriel Lacerda, 26 - Rosa dos Ventos, Nova Iguaçu - RJ, 99999-999</p>
+    </div>
+    <p>Site feito por <a href="#">Gabriel Lacerda</a><p>
+</footer>
 
 
 
@@ -137,4 +158,5 @@
 
 
 </body>
+
 </html>
