Pendencia: menu hamburger

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
     <!-- INICIO HEADER -->
-    <nav class="nav">
+    <nav class="nav" id="itens">
         <div class="logo">
             FITRIO
         </div>
@@ -146,15 +146,6 @@
     </div>
     <p>Site feito por <a href="#">Gabriel Lacerda</a><p>
 </footer>
-
-
-
-
-
-
-
-
-
 
 
 </body>
